# fstore

./: LICENSE  pyproject.toml
src/fstore/: exceptions.py  operations.py  scan.py  util.py
src/fstore/scripts/: archive.py
